--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Clothing - Best Apparels Online Store</title>
+    <title>Clothing - A melhor loja de moda </title>
     <link rel="stylesheet" href="./css/home.css">
 </head>
 <body>
@@ -17,7 +17,7 @@
     <header class="hero-section">
         <div class="content">
             <img src="img/light-logo.png" class="logo" alt="">
-            <p class="sub-heading">best fashion collection of all time</p>
+            <p class="sub-heading">A melhor Moda para voçê</p>
         </div>
     </header>
     <!-- END HERO SECTION -->
